# qmcpack

./: CMakeLists.txt  build_with_lammps.sh  lammps_README.md
CMake/: Findlammps.cmake
docs/: methods.rst
nexus/lib/: qmcpack.py  qmcpack_input.py  simulation.py
src/AFQMC/Drivers/: DriverFactory.cpp
src/Estimators/: EstimatorManagerNew.cpp
src/Numerics/: SoaSphericalTensor.h
src/Particle/: MCWalkerConfigurationHistory.h
src/QMCDrivers/: CMakeLists.txt  DriverTraits.h  QMCDriverFactory.cpp
src/QMCDrivers/DMC/: DMCUpdateAll.cpp  DMCUpdatePbyPL2.cpp  DMCWithHistory.cpp  DMCWithHistory.h
src/QMCDrivers/VMC/: VMC.cpp  VMCBatched.cpp
src/QMCDrivers/WFOpt/: LinearMethod.cpp  QMCCostFunctionBatched.cpp  QMCFixedSampleLinearOptimizeBatched.cpp
src/QMCHamiltonians/: CMakeLists.txt  ForceRhijn.cpp  ForceRhijn.h
src/QMCHamiltonians/tests/: CMakeLists.txt  test_propertyhistory.cpp
src/QMCTools/: PyscfToQmcpack.py  QMCGaussianParserBase.cpp
src/QMCWaveFunctions/: CMakeLists.txt  SPOSet.cpp  SPOSet.h  TWFdispatcher.cpp  WaveFunctionComponent.cpp
src/QMCWaveFunctions/Jastrow/: JastrowBuilder.cpp  JastrowBuilder.h  SNAPJastrow.cpp  SNAPJastrow.h  SNAPJastrowBuilder.cpp  SNAPJastrowBuilder.h  SpinFunctor.h  qmcpack_compute_snap.cpp  qmcpack_compute_snap.h  qmcpack_sna.cpp  qmcpack_sna.h
src/QMCWaveFunctions/LCAO/: LCAOrbitalSet.cpp  LCAOrbitalSet.h  SoaAtomicBasisSet.h
src/QMCWaveFunctions/tests/: CMakeLists.txt  test_MO.cpp
src/QMCWaveFunctions/tests/lammps/: CMakeLists.txt  Mo_Chen_PRM2017.snap  Mo_Chen_PRM2017.snapcoeff  diffusing_particle.lam  he.structure.xml  he_sto3g.wfj.xml  initial_configuration.txt  test_lammps.cpp
